fixed landscape spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -360,15 +360,18 @@ a.skill-box:hover {
 /* small phone (landscape) */
 @media screen and (max-width: 640px) and (orientation: landscape) {
   #home-text {
-    width: 280px;
+    width: 270px;
     font-size: 12pt;
   }
 
   #sketch {
     height: 260px;
+    margin-right: 30px;
   }
 
   #speech-bubble {
+    width: 280px;
+    margin-left: -45px;
     font-size: 20pt;
   }
 }
